Added tutorial for windows

--- a/docs/create/redis-stack/index-redis-stack.mdx
+++ b/docs/create/redis-stack/index-redis-stack.mdx
@@ -134,7 +134,7 @@ You can easily find the Applications folder on your Mac with Finder. Search "Red
 Add the Redis Enterprise cloud database endpoint, port and password. 
 
 
-![access redisinsight](images/database_creDs.png)
+![access redisinsight](images/database_creds.png)
 
 
 ### Step 7. Verify the database under RedisInsight dashboard
