--- a/docs/howtos/redisearch/index-redisearch.mdx
+++ b/docs/howtos/redisearch/index-redisearch.mdx
@@ -9,7 +9,7 @@ authors: [ajeet]
 
 RediSearch is a powerful text search and secondary indexing engine, built on top of Redis as a Redis module. Written in C, RediSearch is extremely fast compared to other open-source search engines. It implements multiple data types and commands that fundamentally change what you can do with Redis. RediSearch supports capabilities for search and filtering such as geo-spatial queries, retrieving only IDs (instead of whole documents), and custom document scoring. Aggregations can combine map, filter, and reduce/group-by operations in custom pipelines that run across millions of elements in an instant. 
 
-RediSearch also supports auto-completion with fuzzy prefix matching, and atomic real-time insertion of new documents to a search index.With the latest RediSearch 2.0 release, it’s now easier than ever to create a secondary index on top of your existing data. You can just add RediSearch to your existing Redis database, create an index, and start querying it, without having to migrate your data or use new commands for adding data to the index. This drastically lowers the learning curve for new RediSearch users and lets you create indexes on your existing Redis databases—without even having to restart them.
+RediSearch also supports auto-completion with fuzzy prefix matching, and atomic real-time insertion of new documents to a search index. With the latest RediSearch 2.0 release, it’s now easier than ever to create a secondary index on top of your existing data. You can just add RediSearch to your existing Redis database, create an index, and start querying it, without having to migrate your data or use new commands for adding data to the index. This drastically lowers the learning curve for new RediSearch users and lets you create indexes on your existing Redis databases—without even having to restart them.
 
 ### Step 1. Create a free Cloud account
 
@@ -28,7 +28,7 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 Choose your preferred cloud vendor. Select the region and then click "Let's start free" to create your free database automatically.
 
 :::info TIP
-If you want to create a custom database with your preferred name and type of redis,
+If you want to create a custom database with your preferred name and type of Redis,
 click "Create a custom database" option shown in the image.
 :::
 
@@ -47,7 +47,7 @@ You will be provided with Public endpoint URL and "Redis Stack" as the type of d
 
 RedisInsight is a visual tool that lets you do both GUI- and CLI-based interactions with your Redis database, and so much more when developing your Redis based application. It is a fully-featured pure Desktop GUI client that provides capabilities to design, develop and optimize your Redis application. It works with any cloud provider as long as you run it on a host with network access to your cloud-based Redis server. It makes it easy to discover cloud databases and configure connection details with a single click. It allows you to automatically add Redis Enterprise Software and Redis Enterprise Cloud databases.
 
-You can install Redis Stack on your local system to get RedisInsight GUI tool up and running. Ensure that you have `brew` package installed in your Mac system.
+You can install Redis Stack on your local system to get the RedisInsight GUI tool up and running. Ensure that you have `brew` package installed in your Mac system.
 
 
  ```bash
@@ -63,7 +63,7 @@ You can install Redis Stack on your local system to get RedisInsight GUI tool up
   🍺  redis-stack was successfully installed!
  ```
 
-Go to Applications and click "RedisInsight Preview" to bring up the Redis Desktop GUI tool.
+Go to Applications and click "RedisInsight-v2" to bring up the Redis Desktop GUI tool.
 
 
 ### Step 5. Add Redis database
