--- a/docs/howtos/redisjson/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisjson/getting-started/index-gettingstarted.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-gettingstarted
 title: Storing and Querying JSON documents using Redis Stack
-sidebar_label: Sotring and Querying JSON documents 
+sidebar_label: Storing and Querying JSON documents 
 slug: /howtos/redisjson/getting-started
 authors: [ajeet]
 ---
@@ -26,7 +26,7 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 Choose your preferred cloud vendor. Select the region and then click "Let's start free" to create your free database automatically.
 
 :::info TIP
-If you want to create a custom database with your preferred name and type of redis,
+If you want to create a custom database with your preferred name and type of Redis,
 click "Create a custom database" option shown in the image.
 :::
 
@@ -60,7 +60,7 @@ You can install Redis Stack on your local system to get RedisInsight GUI tool up
 🍺  redis-stack was successfully installed!
  ```
 
-Go to Applications and click "RedisInsight Preview" to bring up the Redis Desktop GUI tool.
+Go to Applications and click "RedisInsight-v2" to bring up the Redis Desktop GUI tool.
 
 ### Step 6. Enter Redis Enterprise Cloud details
 
