--- a/docs/create/rediscloud/index-recloud.mdx
+++ b/docs/create/rediscloud/index-recloud.mdx
@@ -24,11 +24,11 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 Choose your preferred cloud vendor. Select the region and then click "Let's start free" to create your free database automatically.
 
 :::info TIP
-If you want to create a custom database with your preferred name and type of redis,
+If you want to create a custom database with your preferred name and type of Redis,
 click "Create a custom database" option shown in the image.
 :::
 
-![create database ](images/select_cloud_vendor.png)
+![create database](images/select_cloud_vendor.png)
 
 
 ### Step 3.  Verify the database details
@@ -59,7 +59,7 @@ You can install Redis Stack on your local system to get RedisInsight GUI tool up
   🍺  redis-stack was successfully installed!
  ```
 
-Go to Applications and click "RedisInsight Preview" to bring up the Redis Desktop GUI tool.
+Go to Applications and click "RedisInsight-v2" to bring up the Redis Desktop GUI tool.
 
 
 ### Step 5. Add Redis database
@@ -94,15 +94,15 @@ Let's examine the query for creating a single bike. Click "Create a bike" button
 ![access json keys](images/stack2.png)
 
 
-It will display JSON.SET command with model, brand, price, type, specs and description details. The `bikes:1` is the name of Redis JSON key.
+It will display a `JSON.SET` command with model, brand, price, type, specs and description details. `bikes:1` is the name of the Redis key where the JSON is stored.
 
-### Step 10. Accessing the part of stored JSON document
+### Step 10. Accessing parts of a stored JSON document
 
-Click "Get specific fileds" to access a part of stored JSON document as shown in the following diagram:
+Click "Get specific fields" to access part of a stored JSON document as shown in the following diagram:
 
 ![access json keys](images/stack3.png)
 
-### Next Step
+### Next Steps
 
 - [Connecting to the database using RedisInsight](/explore/redisinsight/)
 - [How to list & search Movies database using Redisearch](/howtos/moviesdatabase/getting-started/)
