--- a/docs/howtos/redisgraph/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisgraph/getting-started/index-gettingstarted.mdx
@@ -26,14 +26,14 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 Choose your preferred cloud vendor. Select the region and then click "Let's start free" to create your free database automatically.
 
 :::info TIP
-If you want to create a custom database with your preferred name and type of redis,
+If you want to create a custom database with your preferred name and type of Redis,
 click "Create a custom database" option shown in the image.
 :::
 
 ![create database ](images/select_cloud_vendor.png)
 
 
-### Step 3.  Verify the database details
+### Step 3. Verify the database details
 
 You will be provided with Public endpoint URL and "Redis Stack" as the type of database with the list of modules that comes by default.
 
@@ -62,7 +62,7 @@ You can install Redis Stack on your local system to get RedisInsight GUI tool up
   🍺  redis-stack was successfully installed!
  ```
 
-Go to Applications and click "RedisInsight Preview" to bring up the Redis Desktop GUI tool.
+Go to Applications and click "RedisInsight-v2" to bring up the Redis Desktop GUI tool.
 
 ### Step 5. Add Redis database
 
