--- a/docs/howtos/redistimeseries/getting-started/index-redistimeseries.mdx
+++ b/docs/howtos/redistimeseries/getting-started/index-redistimeseries.mdx
@@ -29,7 +29,7 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 Choose your preferred cloud vendor. Select the region and then click "Let's start free" to create your free database automatically.
 
 :::info TIP
-If you want to create a custom database with your preferred name and type of redis,
+If you want to create a custom database with your preferred name and type of Redis,
 click "Create a custom database" option shown in the image.
 :::
 
@@ -49,7 +49,7 @@ You will be provided with Public endpoint URL and "Redis Stack" as the type of d
 
 RedisInsight is a visual tool that lets you do both GUI- and CLI-based interactions with your Redis database, and so much more when developing your Redis based application. It is a fully-featured pure Desktop GUI client that provides capabilities to design, develop and optimize your Redis application. It works with any cloud provider as long as you run it on a host with network access to your cloud-based Redis server. It makes it easy to discover cloud databases and configure connection details with a single click. It allows you to automatically add Redis Enterprise Software and Redis Enterprise Cloud databases.
 
-You can install Redis Stack on your local system to get RedisInsight GUI tool up and running. Ensure that you have `brew` package installed in your Mac system.
+You can install Redis Stack on your local system to get RedisInsight GUI tool up and running. Ensure that you have the `brew` package installed in your Mac system.
 
 
  ```bash
@@ -65,7 +65,7 @@ You can install Redis Stack on your local system to get RedisInsight GUI tool up
   🍺  redis-stack was successfully installed!
  ```
 
-Go to Applications and click "RedisInsight Preview" to bring up the Redis Desktop GUI tool.
+Go to Applications and click "RedisInsight-v2" to bring up the Redis Desktop GUI tool.
 
 ### Step 5. Add Redis database
 
