--- a/docs/create/redis-stack/index-redis-stack.mdx
+++ b/docs/create/redis-stack/index-redis-stack.mdx
@@ -14,12 +14,12 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 ![redis stack](images/redis-stack.png)
 
-Redis Stack is an extension of Redis that adds modern data models and processing engines to provide a complete developer experience. Redis Stack provides a simple and seamless way to access different data models such as full-text search, document store, graph, time series, and probabilistic data structures enabling developers to build any real-time data application. 
+Redis Stack is an extension of Redis that adds modern data models and processing engines to provide a complete developer experience. Redis Stack provides a simple and seamless way to access different data models such as full-text search, document store, graph, time series, and probabilistic data structures enabling developers to build any real-time data application.
 
 
 ### Redis OSS vs. Redis Stack
 
-In addition to all of the features of OSS Redis, Redis stack supports:
+In addition to all of the features of OSS Redis, Redis Stack supports:
 
 - Queryable JSON documents
 - Full-text search
@@ -79,11 +79,11 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 
 ### Step 2. Create Your database
 
-For the cloud provider, select your preferred cloud (for demo purpose).
+For the cloud provider, select your preferred cloud.
 Select the region of your choice and then click "Let's start free".
 
 :::info TIP
-If you want to create a custom database with your preferred name and type of redis,
+If you want to create a custom database with your preferred name and type of Redis,
 click "Create a custom database".
 :::
 
@@ -92,7 +92,7 @@ click "Create a custom database".
 
 ### Step 3.  Listing the database details
 
-Once fully activated, you will see the database endpoints as shown below
+Once fully activated, you will see the database endpoints as shown below:
 
 
 
@@ -104,7 +104,7 @@ Once fully activated, you will see the database endpoints as shown below
 
 RedisInsight is a visual tool that lets you do both GUI- and CLI-based interactions with your Redis database, and so much more when developing your Redis based application. It is a fully-featured pure Desktop GUI client that provides capabilities to design, develop and optimize your Redis application. It works with any cloud provider as long as you run it on a host with network access to your cloud-based Redis server. It makes it easy to discover cloud databases and configure connection details with a single click. It allows you to automatically add Redis Enterprise Software and Redis Enterprise Cloud databases.
 
-You can install Redis Stack on your local system to get RedisInsight GUI tool up and running. Ensure that you have `brew` package installed in your Mac system.
+You can install Redis Stack on your local system to get RedisInsight GUI tool up and running. Ensure that you have the `brew` package installed in your Mac system.
 
 
  ```bash
@@ -120,18 +120,18 @@ You can install Redis Stack on your local system to get RedisInsight GUI tool up
   🍺  redis-stack was successfully installed!
  ```
 
-You can easily find the Applications folder on your Mac with Finder. Search "RedisInsight Preview" and click the icon to bring up the Redis Desktop GUI tool.
+You can easily find the Applications folder on your Mac with Finder. Search "RedisInsight-v2" and click the icon to bring up the Redis Desktop GUI tool.
 
 
 
 
-### Step 5. Add Redis database 
+### Step 5. Add Redis database
 
 ![access redisinsight](images/add_database.png)
 
 ### Step 6. Enter Redis Enterprise Cloud details
 
-Add the Redis Enterprise cloud database endpoint, port and password. 
+Add the Redis Enterprise cloud database endpoint, port and password.
 
 
 ![access redisinsight](images/database_creds.png)
@@ -157,11 +157,11 @@ Let's examine the query for creating a single bike. Click "Create a bike" button
 
 ![access json keys](images/stack2.png)
 
-It will display JSON.SET command with model, brand, price, type, specs and description details. The `bikes:1` is the name of Redis JSON key.
+It will display a `JSON.SET` command with model, brand, price, type, specs and description details. The `bikes:1` is the name of the Redis key that the JSON will be stored in.
 
-### Step 10. Accessing the part of stored JSON document 
+### Step 10. Accessing part of a stored JSON document
 
-Click "Get specific fileds" to access a part of stored JSON document as shown in the following image:
+Click "Get specific fields" to access parts of a stored JSON document as shown in the following image:
 
 ![access json keys](images/stack3.png)
 
@@ -171,7 +171,7 @@ Click "Get specific fileds" to access a part of stored JSON document as shown in
 
 <TabItem value="Mac">
 
-To install Redis Stack on macOS, use Homebrew.  Follow the below set of instructions:
+Use homebrew to install Redis Stack on macOS, by following these instructions:
 
 
 ### Step 1. Install Homebrew
@@ -202,7 +202,7 @@ This will install all Redis and Redis Stack binaries. How you run these binaries
 
 :::info TIP
 
-If this is the first time you’ve installed Redis on your system, then all Redis Stack binaries will be installed and accessible from the `$PATH`. On M1 Macs, this assumes that `/opt/homebrew/bin` is in your path. On Intel-based Macs, /usr/local/bin should be in the $PATH.
+If this is the first time you’ve installed Redis on your system, then all Redis Stack binaries will be installed and on your path. On M1 Macs, this assumes that `/opt/homebrew/bin` is in your path. On Intel-based Macs, `/usr/local/bin` should be in the path.
 
 To check this, run:
 
@@ -211,7 +211,7 @@ To check this, run:
  ```
 
 
-Then, confirm that the output contains /opt/homebrew/bin (M1 Mac) or /usr/local/bin (Intel Mac). If these directories are not in the output, see the “Existing Redis installation” instructions below.
+Then, confirm that the output contains `/opt/homebrew/bin` (M1 Mac) or `/usr/local/bin` (Intel Mac). If these directories are not in the output, see the “Existing Redis installation” instructions below.
 :::
 
 ### Start Redis Stack Server
@@ -225,9 +225,9 @@ You can now start Redis Stack Server as follows:
 
 ### Existing Redis installation
 
-If you have an existing Redis installation on your system, then you’ll need to modify your `$PATH` to ensure that you’re using the latest Redis Stack binaries.
+If you have an existing Redis installation on your system, then you’ll need to modify your path to ensure that you’re using the latest Redis Stack binaries.
 
-Open the file `~/.bashrc` or `~/zshrc` (depending on your shell), and add the following lines.
+Open the file `~/.bashrc` or `~/zshrc` (depending on your shell), and add the following line.
 
 
  ```bash
@@ -235,7 +235,7 @@ Open the file `~/.bashrc` or `~/zshrc` (depending on your shell), and add the fo
  ```
 
 
-Go to Applications and click "RedisInsight Preview" to bring up the Redis Desktop GUI tool.
+Go to Applications and click "RedisInsight-v2" to bring up the Redis Desktop GUI tool.
 
 
 
@@ -260,7 +260,7 @@ Redis Stack provides you with a native time series data structure. Let's see how
 As we have multiple physical shops too, alongside our online shop, it could be helpful to have an overview of the sales volume. We will create one time series per shop tracking the total amount of all sales. In addition, we will mark the time series with the appropriate region label, east or west. This kind of representation will allow us to easily query bike sales performance per certain time periods, per shop, per region or across all shops.
 
 
-Click "Guides" icon(just below the key) in the left sidebar and choose "Redis for the time series" for this demonstration. i
+Click the "Guides" icon (just below the key) in the left sidebar and choose "Redis for time series" for this demonstration.
 
 
 ![redis for timeseries](images/testredis2.png)
@@ -275,7 +275,7 @@ Click "Guides" icon(just below the key) in the left sidebar and choose "Redis fo
   TS.CREATE bike_sales_4 DUPLICATE_POLICY SUM LABELS region west compacted no
   TS.CREATE bike_sales_5 DUPLICATE_POLICY SUM LABELS region west compacted no
  ```
-As shown in the following query, we make the shop id (1,2,3,4,5) a part of the time series name. You might also notice the DUPLICATE_POLICY SUM argument; this describes what should be done when two events in the same time series share the same timestamp: In this case, it would mean that two sales happened at exactly the same time, so the resulting value should be a sum of the two sales amounts.
+As shown in the following query, we make the shop id (1,2,3,4,5) a part of the time series name. You might also notice the `DUPLICATE_POLICY SUM` argument; this describes what should be done when two events in the same time series share the same timestamp: In this case, it would mean that two sales happened at exactly the same time, so the resulting value should be a sum of the two sales amounts.
 
 Since the metrics are collected with a millisecond timestamp, we can compact our time series into sales per hour:
 
@@ -304,7 +304,7 @@ RedisTimeSeries supports downsampling with the following aggregations: avg, sum,
 
 <TabItem value="Docker">
 
-You can run Redis Stack using Docker container. There are two types of Docker images available in Docker Hub.
+You can run Redis Stack using a Docker container. There are two types of Docker images available in Docker Hub.
 
 - The `redis/redis-stack` Docker image contains both Redis Stack server and RedisInsight. This container is recommended for local development because you can use RedisInsight to visualize your data.
 
@@ -330,19 +330,19 @@ The `docker run` command above also exposes RedisInsight on port 8001. You can u
 :::
 
 
-To persist your Redis data to a local path, specify -v to configure a local volume. This command stores all data in the local directory local-data:
+To persist your Redis data to a local path, specify -v to configure a local volume. This command stores all data in the local directory `local-data`:
 
  ```bash
   docker run -v /local-data/:/data redis/redis-stack:latest
  ```
 
-If you want to expose Redis Stack server or RedisInsight on a different port, update the left hand of portion of the -p argument. This command exposes Redis Stack server on port 10001 and RedisInsight on port 13333:
+If you want to expose Redis Stack server or RedisInsight on a different port, update the left hand of portion of the `-p` argument. This command exposes Redis Stack server on port 10001 and RedisInsight on port 13333:
 
  ```bash
   docker run -p 10001:6379 -p 13333:8001 redis/redis-stack:latest
  ```
 
-By default, the Redis Stack Docker containers use internal configuration files for Redis. To start Redis with local configuration file, you can use the -v volume options:
+By default, the Redis Stack Docker containers use internal configuration files for Redis. To start Redis with a local configuration file, you can use the `-v` volume options:
 
  ```bash
   docker run -v `pwd`/local-redis-stack.conf:/redis-stack.conf -p 6379:6379 -p 8001:8001 redis/redis-stack:latest
@@ -350,14 +350,14 @@ By default, the Redis Stack Docker containers use internal configuration files f
 
 To pass in arbitrary configuration changes, you can set any of these environment variables:
 
-- REDIS_ARGS: extra arguments for Redis
-- REDISEARCH_ARGS: arguments for RediSearch
-- REDISJSON_ARGS: arguments for RedisJSON
-- REDISGRAPH_ARGS: arguments for RedisGraph
-- REDISTIMESERIES_ARGS: arguments for RedisTimeSeries
-- REDISBLOOM_ARGS: arguments for RedisBloom
+- `REDIS_ARGS`: extra arguments for Redis
+- `REDISEARCH_ARGS`: arguments for RediSearch
+- `REDISJSON_ARGS`: arguments for RedisJSON
+- `REDISGRAPH_ARGS`: arguments for RedisGraph
+- `REDISTIMESERIES_ARGS`: arguments for RedisTimeSeries
+- `REDISBLOOM_ARGS`: arguments for RedisBloom
 
-For example, here’s how to use the REDIS_ARGS environment variable to pass the requirepass directive to Redis:
+For example, here’s how to use the `REDIS_ARGS` environment variable to pass the `requirepass` directive to Redis:
 
  ```
   docker run -e REDIS_ARGS="--requirepass redis-stack" redis/redis-stack:latest
@@ -372,7 +372,7 @@ Here’s how to set a retention policy for RedisTimeSeries:
 </TabItem>
 </Tabs>
 
-### Next Steps 
+### Next Steps
 
 
 
@@ -381,10 +381,10 @@ Here’s how to set a retention policy for RedisTimeSeries:
 <div class="col ">
 <div className="ri-container">
 
-#### Storing and querying JSON documents 
+#### Storing and querying JSON documents
 
 
-[Follow this tutorial](/howtos/redisjson/getting-started) in order to store and query JSON documents using Redis Stack
+[Follow this tutorial](/howtos/redisjson/getting-started) to learn how to store and query JSON documents using Redis Stack.
 
 
 </div>
@@ -393,13 +393,13 @@ Here’s how to set a retention policy for RedisTimeSeries:
 <div class="col">
 <div className="ri-container">
 
-#### Full-text search 
+#### Full-text search
 
 
 
 
 
-Learn how to [perform full-text search](/howtos/redisearch/) using Redis Stack
+Learn how to [perform full-text search](/howtos/redisearch/) using Redis Stack.
 
 </div>
 </div>
@@ -411,10 +411,10 @@ Learn how to [perform full-text search](/howtos/redisearch/) using Redis Stack
 <div class="col ">
 <div className="ri-container">
 
-#### Probabilistic data structure
+#### Probabilistic data structures
 
 
-Follow this tutorial to learn [how to implement low latency and compact Probabilistic data structure](/howtos/redisbloom) using Redis Stack
+Follow this tutorial to learn [how to implement low latency and compact Probabilistic data structures](/howtos/redisbloom) using Redis Stack.
 
 
 </div>
@@ -423,13 +423,13 @@ Follow this tutorial to learn [how to implement low latency and compact Probabil
 <div class="col">
 <div className="ri-container">
 
-#### Storing and querying time seris data
+#### Storing and querying time series data
 
 
 
 
 
-[Learn how to store and query time series data](/howtos/redistimeseries/getting-started) using Redis Stack
+[Learn how to store and query time series data](/howtos/redistimeseries/getting-started) using Redis Stack.
 
 </div>
 </div>
