connect-to-redis->getting-started, adding byline

--- a/docs/develop/dotnet/aspnetcore/rate-limiting/fixed-window/index-rate-limiting.mdx
+++ b/docs/develop/dotnet/aspnetcore/rate-limiting/fixed-window/index-rate-limiting.mdx
@@ -3,6 +3,7 @@ id: index-rate-limiting
 title: How to implement a Fixed Window Rate Limiting app using ASP.NET Core & Redis
 sidebar_label: Fixed Window Rate Limiting app using ASP.NET
 slug: /develop/dotnet/aspnetcore/rate-limiting/fixed-window
+authors: [steve]
 ---
 
 In this tutorial, we will build an app that implements basic fixed-window rate limiting using Redis & ASP.NET Core.
