--- a/docs/develop/dotnet/index-dotnet.mdx
+++ b/docs/develop/dotnet/index-dotnet.mdx
@@ -3,6 +3,7 @@ id: index-dotnet
 title: .NET and Redis
 sidebar_label: Getting Started
 slug: /develop/dotnet/
+authors: [steve]
 ---
 
 import Tabs from '@theme/Tabs';
